Fix scrollbars in picker component

--- a/src/components/picker/index.css
+++ b/src/components/picker/index.css
@@ -5,6 +5,10 @@
   scrollbar-width: none;
 }
 
+.picker::-webkit-scrollbar {
+  display: none;
+}
+
 .picker-wrap {
   display: flex;
 }
